--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ body {
 
 .header {
   width: 100%;
-  height: 100vh;
+  height: 100rem;
   background-image: url("../images/bg-hero-desktop.svg");
   background-color: #ebfbff;
   background-size: cover;
