--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ body {
 
 .header {
   width: 100%;
-  height: 90rem;
+  height: 100vh;
   background-image: url("../images/bg-hero-desktop.svg");
   background-color: #ebfbff;
   background-size: cover;
@@ -50,6 +50,10 @@ body {
 @media only screen and (max-width: 600px) {
   .header {
     height: auto;
+    background-image: url("../images/bg-hero-mobile.svg");
+    background-color: #ebfbff;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 }
 
@@ -91,7 +95,7 @@ body {
 }
 
 .header__top-image {
-  max-width: 45rem;
+  max-width: 40rem;
   height: auto;
 }
 
